--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+body{
+  background-color: black;
+  color: white;
+}
+
+@layer components {
+  .btn {
+    @apply px-8 py-4 bg-white text-black rounded-full min-w-36 text-center transition-transform duration-300 hover:scale-105
+  }
+  .input {
+    @apply bg-gray-300 outline-none py-1 px-4 rounded-md text-gray-900 font-semibold disabled:opacity-80
+  }
+  .msg{
+    @apply bg-red-300 p-2 rounded font-medium text-zinc-900
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
