--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,13 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #555555;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #272727;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body{
+body {
   background-color: black;
   color: white;
 }
@@ -21,7 +37,6 @@ body{
   padding: 2px !important;
 }
 
-
 .fc-toolbar {
   background-color: black;
   color: white;
@@ -29,15 +44,25 @@ body{
   border-radius: 20px;
 }
 
+
+.fc-multimonth-title{
+  background-color: black;
+}
+
+
 .fc-daygrid-day {
-  background-color: #f5f5f5;
+  background-color: white;
 }
 
 .fc .fc-button {
-  background-color: black !important;
-  color: white !important;
+  background-color: white !important;
+  color: black !important;
   border-color: white !important;
   border-radius: 5px !important;
+}
+
+.fc-multimonth-daygrid-table {
+  color: black;
 }
 
 .fc .fc-today-button {
@@ -46,17 +71,18 @@ body{
   border: 1px solid black !important;
 }
 
-
+.fc .fc-multimonth{
+  border: none;
+}
 
 @layer components {
   .btn {
-    @apply px-8 py-4 bg-white text-black rounded-full min-w-36 text-center transition-transform duration-300 hover:scale-105
+    @apply px-8 py-4 bg-white text-black rounded-full min-w-36 text-center transition-transform duration-300 hover:scale-105;
   }
   .input {
-    @apply bg-gray-300 outline-none py-1 px-4 rounded-md text-gray-900 font-semibold disabled:opacity-80
+    @apply bg-gray-300 outline-none py-1 px-4 rounded-md text-gray-900 font-semibold disabled:opacity-80;
   }
-  .msg{
-    @apply bg-red-300 p-2 rounded font-medium text-zinc-900
+  .msg {
+    @apply bg-red-300 p-2 rounded font-medium text-zinc-900;
   }
 }
-
