--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,7 @@
 }
 
 
+
 .fc-event {
   color: white !important;
   border: none !important;
@@ -61,6 +62,10 @@
 
 .fc-multimonth-daygrid-table {
   color: black;
+}
+
+.fc-multimonth-title{
+  color: white;
 }
 
 .fc .fc-today-button {
